--- a/index.html
+++ b/index.html
@@ -251,91 +251,91 @@
 <script>
 TweenMax.set([".main",".bg",".bgcover",".bgpics .bgcircle",".bgpics img",".musiccard",".tag",".musiccard #recorder",".keywords",".ocean","#dragnav",".logo"],{opacity:0})
 var pageLoad = new TimelineMax();
-var queue = new createjs.LoadQueue(false);
-queue.loadFile("images/amigo.jpg")
-queue.loadFile("images/amigobg.jpg")
-queue.loadFile("images/amigosinger.jpg")
-queue.loadFile("images/4.png")
-queue.loadFile("images/close_in.svg")
-queue.loadFile("images/close_out_reverse.svg")
-queue.loadFile("images/close_out.svg")
-queue.loadFile("images/D4WRiZsUUAItc2a.jpg")
-queue.loadFile("images/icon.png")
-queue.loadFile("images/katame.jpg")
-queue.loadFile("images/katamebg.jpg")
-queue.loadFile("images/katamesinger.png")
-queue.loadFile("images/kibou.jpg")
-queue.loadFile("images/kiboubg.jpg")
-queue.loadFile("images/kibousinger.png")
-queue.loadFile("images/kiseki.jpg")
-queue.loadFile("images/kisekibg.jpg")
-queue.loadFile("images/kisekisinger.png")
-queue.loadFile("images/kobu.png")
-queue.loadFile("images/kobukuro.jpg")
-queue.loadFile("images/lemon.jpg")
-queue.loadFile("images/lemonbg.jpg")
-queue.loadFile("images/lemonsinger.jpg")
-queue.loadFile("images/lemonsinger.png")
-queue.loadFile("images/logo.png")
-queue.loadFile("images/love.jpg")
-queue.loadFile("images/lovebg.jpg")
-queue.loadFile("images/lovesinger.png")
-queue.loadFile("images/mig.jpeg")
-queue.loadFile("images/needlemask.png")
-queue.loadFile("images/ninjya.jpg")
-queue.loadFile("images/ninjyabg.jpg")
-queue.loadFile("images/ninjyasinger.png")
-queue.loadFile("images/profilemask.png")
-queue.loadFile("images/rangeslide.svg")
-queue.loadFile("images/reflect.png")
-queue.loadFile("images/secret.jpg")
-queue.loadFile("images/secretbg.jpg")
-queue.loadFile("images/secretsinger.png")
-queue.loadFile("images/tenshi.jpg")
-queue.loadFile("images/tenshibg.jpg")
-queue.loadFile("images/tenshisinger.png")
-queue.loadFile("images/tubomi.jpg")
-queue.loadFile("images/tubomibg.jpg")
-queue.loadFile("images/wave1.png")
-queue.loadFile("images/wave2.png")
-queue.loadFile("images/waveamigo1.svg")
-queue.loadFile("images/waveamigo2.svg")
-queue.loadFile("images/waveblue1.svg")
-queue.loadFile("images/waveblue2.svg")
-queue.loadFile("images/wavegreen1.svg")
-queue.loadFile("images/wavegreen2.svg")
-queue.loadFile("images/wavekatame1.svg")
-queue.loadFile("images/wavekatame2.svg")
-queue.loadFile("images/wavekibou1.svg")
-queue.loadFile("images/wavekibou2.svg")
-queue.loadFile("images/wavekiseki1.svg")
-queue.loadFile("images/wavekiseki2.svg")
-queue.loadFile("images/wavelove1.svg")
-queue.loadFile("images/wavelove2.svg")
-queue.loadFile("images/waveorange1.svg")
-queue.loadFile("images/waveorange2.svg")
-queue.loadFile("images/wavesecret1.svg")
-queue.loadFile("images/wavesecret2.svg")
-queue.loadFile("images/wavetenshi1.svg")
-queue.loadFile("images/wavetenshi2.svg")
-queue.loadFile("music/amigo.mp3")
-queue.loadFile("music/katame.mp3")
-queue.loadFile("music/kibou.mp3")
-queue.loadFile("music/kiseki.mp3")
-queue.loadFile("music/lemon.mp3")
-queue.loadFile("music/love.mp3")
-queue.loadFile("music/namida.mp3")
-queue.loadFile("music/ninjya.mp3")
-queue.loadFile("music/secret.mp3")
-queue.loadFile("music/tenshi.mp3")
-queue.loadFile("music/tubomi.mp3")
-queue.loadFile("font/Aozora Mincho bold.ttf")
-queue.loadFile("font/Aozora Mincho thin.ttf")
-queue.loadFile("font/HiraMinProN-W3.otf")
-queue.loadFile("font/KozMinPro-ExtraLight.otf")
-queue.loadFile("font/KozMinPro-Medium.otf")
-queue.loadFile("font/kumamoto.otf")
-queue.on("complete",event =>{
+// var queue = new createjs.LoadQueue(false);
+// queue.loadFile("images/amigo.jpg")
+// queue.loadFile("images/amigobg.jpg")
+// queue.loadFile("images/amigosinger.jpg")
+// queue.loadFile("images/4.png")
+// queue.loadFile("images/close_in.svg")
+// queue.loadFile("images/close_out_reverse.svg")
+// queue.loadFile("images/close_out.svg")
+// queue.loadFile("images/D4WRiZsUUAItc2a.jpg")
+// queue.loadFile("images/icon.png")
+// queue.loadFile("images/katame.jpg")
+// queue.loadFile("images/katamebg.jpg")
+// queue.loadFile("images/katamesinger.png")
+// queue.loadFile("images/kibou.jpg")
+// queue.loadFile("images/kiboubg.jpg")
+// queue.loadFile("images/kibousinger.png")
+// queue.loadFile("images/kiseki.jpg")
+// queue.loadFile("images/kisekibg.jpg")
+// queue.loadFile("images/kisekisinger.png")
+// queue.loadFile("images/kobu.png")
+// queue.loadFile("images/kobukuro.jpg")
+// queue.loadFile("images/lemon.jpg")
+// queue.loadFile("images/lemonbg.jpg")
+// queue.loadFile("images/lemonsinger.jpg")
+// queue.loadFile("images/lemonsinger.png")
+// queue.loadFile("images/logo.png")
+// queue.loadFile("images/love.jpg")
+// queue.loadFile("images/lovebg.jpg")
+// queue.loadFile("images/lovesinger.png")
+// queue.loadFile("images/mig.jpeg")
+// queue.loadFile("images/needlemask.png")
+// queue.loadFile("images/ninjya.jpg")
+// queue.loadFile("images/ninjyabg.jpg")
+// queue.loadFile("images/ninjyasinger.png")
+// queue.loadFile("images/profilemask.png")
+// queue.loadFile("images/rangeslide.svg")
+// queue.loadFile("images/reflect.png")
+// queue.loadFile("images/secret.jpg")
+// queue.loadFile("images/secretbg.jpg")
+// queue.loadFile("images/secretsinger.png")
+// queue.loadFile("images/tenshi.jpg")
+// queue.loadFile("images/tenshibg.jpg")
+// queue.loadFile("images/tenshisinger.png")
+// queue.loadFile("images/tubomi.jpg")
+// queue.loadFile("images/tubomibg.jpg")
+// queue.loadFile("images/wave1.png")
+// queue.loadFile("images/wave2.png")
+// queue.loadFile("images/waveamigo1.svg")
+// queue.loadFile("images/waveamigo2.svg")
+// queue.loadFile("images/waveblue1.svg")
+// queue.loadFile("images/waveblue2.svg")
+// queue.loadFile("images/wavegreen1.svg")
+// queue.loadFile("images/wavegreen2.svg")
+// queue.loadFile("images/wavekatame1.svg")
+// queue.loadFile("images/wavekatame2.svg")
+// queue.loadFile("images/wavekibou1.svg")
+// queue.loadFile("images/wavekibou2.svg")
+// queue.loadFile("images/wavekiseki1.svg")
+// queue.loadFile("images/wavekiseki2.svg")
+// queue.loadFile("images/wavelove1.svg")
+// queue.loadFile("images/wavelove2.svg")
+// queue.loadFile("images/waveorange1.svg")
+// queue.loadFile("images/waveorange2.svg")
+// queue.loadFile("images/wavesecret1.svg")
+// queue.loadFile("images/wavesecret2.svg")
+// queue.loadFile("images/wavetenshi1.svg")
+// queue.loadFile("images/wavetenshi2.svg")
+// queue.loadFile("music/amigo.mp3")
+// queue.loadFile("music/katame.mp3")
+// queue.loadFile("music/kibou.mp3")
+// queue.loadFile("music/kiseki.mp3")
+// queue.loadFile("music/lemon.mp3")
+// queue.loadFile("music/love.mp3")
+// queue.loadFile("music/namida.mp3")
+// queue.loadFile("music/ninjya.mp3")
+// queue.loadFile("music/secret.mp3")
+// queue.loadFile("music/tenshi.mp3")
+// queue.loadFile("music/tubomi.mp3")
+// queue.loadFile("font/Aozora Mincho bold.ttf")
+// queue.loadFile("font/Aozora Mincho thin.ttf")
+// queue.loadFile("font/HiraMinProN-W3.otf")
+// queue.loadFile("font/KozMinPro-ExtraLight.otf")
+// queue.loadFile("font/KozMinPro-Medium.otf")
+// queue.loadFile("font/kumamoto.otf")
+// queue.on("complete",event =>{
 	pageLoad
 		.fromTo(".main",1.5,{opacity:0,yPercent:3},{opacity:1,delay:0.7,yPercent:0,ease:Circ.easeOut})
 		.fromTo(".bg",2,{opacity:0,ease:Power4.easeOut},{opacity:1},"-=1.5")
@@ -350,7 +350,7 @@ queue.on("complete",event =>{
 		.fromTo("#dragnav",2.8,{yPercent:-10},{opacity:1,yPercent:0,ease:Back.easeOut.config(4)},"-=2.3")
 
 		
-})
+// })
 
 var page1 = new Function();
 	
